# flexdat

./: .continueignore  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
docs/: README.txt  conf.py  index.rst
src/flexdat/: __init__.py  dataset.py  dataset_alignment_ants.py  dataset_cached_h5.py  dataset_cached_memcached.py  dataset_cached_multi_samples.py  dataset_cached_pool.py  dataset_cached_uid.py  dataset_concat.py  dataset_dicom.py  dataset_dicom_postprocessor.py  dataset_dict.py  dataset_docker.py  dataset_docker_utils.py  dataset_image_folder.py  dataset_image_processing.py  dataset_image_reader.py  dataset_image_reader_dict.py  dataset_inject_metadata.py  dataset_memcached.py  dataset_merge.py  dataset_multi_samples.py  dataset_nifti.py  dataset_nifti_folder.py  dataset_pairing.py  dataset_pairing_list.py  dataset_pairing_preprocessor.py  dataset_path.py  dataset_read_h5.py  dataset_resample.py  dataset_resample_target_calculator.py  dataset_safe.py  dataset_subset.py  dataset_transform.py  dataset_virtual_resize.py  dicom_folder.py  itk.py  sampler_pairing.py  sampling.py  types.py  (+4 more)
tests/: test_cached_uid.py  test_dataset_alignment.py  test_dataset_cached_memcached.py  test_dataset_cached_multi_samples.py  test_dataset_cached_pool.py  test_dataset_concat.py  test_dataset_dicom.py  test_dataset_dict.py  test_dataset_docker.py  test_dataset_h5.py  test_dataset_image_reader.py  test_dataset_image_reader_dict.py  test_dataset_inject_metadata.py  test_dataset_multi_sample.py  test_dataset_pairing_preprocessing.py  test_dataset_path.py  test_dataset_read_h5.py  test_dataset_resample.py  test_dataset_safe.py  test_dataset_subset.py  test_dataset_transform.py  test_dataset_virtual_resize.py  test_itk.py  test_itk_resample.py  test_merge.py  test_optional_import.py  test_utils.py  utils.py
tests/docker/: Dockerfile
tests/resource/dicom_01/image/: 1-01.dcm  1-02.dcm  1-03.dcm  1-04.dcm  1-05.dcm  1-06.dcm  1-07.dcm  1-08.dcm  1-09.dcm  1-10.dcm  1-11.dcm  1-12.dcm  1-13.dcm  1-14.dcm  1-15.dcm  1-16.dcm  1-17.dcm  1-18.dcm  1-19.dcm  1-20.dcm  1-21.dcm  1-22.dcm  1-23.dcm  1-24.dcm  1-25.dcm  1-26.dcm  1-27.dcm  1-28.dcm  1-29.dcm  1-30.dcm  1-31.dcm  1-32.dcm  1-33.dcm  1-34.dcm  1-35.dcm  1-36.dcm  1-37.dcm  1-38.dcm  1-39.dcm  1-40.dcm  (+20 more)
(+39 files in other folders)
